@@ -1047,6 +1047,13 @@ int seq_read_frame_metadata(sequence *seq, int index, fits *dest) {
 #ifdef _OPENMP
 				int thread_id = omp_get_thread_num();
 				dest->fptr = seq->fitseq_file->thread_fptr[thread_id];
+				int status = 0;
+				fits_movabs_hdu(dest->fptr, seq->fitseq_file->hdu_index[index], NULL, &status);
+				if (status) {
+					siril_log_message(_("Could not seek frame %d from FITS sequence %s. Error status: %d\n"),
+							index, seq->seqname, status);
+					return 1;
+				}
 				if (read_fits_metadata(dest)) {
 					siril_log_message(_("Could not load frame %d from FITS sequence %s\n"),
 							index, seq->seqname);
@@ -1533,7 +1540,7 @@ gboolean sequence_is_loaded() {
 }
 
 gboolean check_seq_is_comseq(const sequence *seq) {
-	if (!com.script && sequence_is_loaded() && !g_strcmp0(com.seq.seqname, seq->seqname))
+	if (sequence_is_loaded() && !g_strcmp0(com.seq.seqname, seq->seqname))
 		return TRUE;
 	return FALSE;
 }
